voting-app/ingress-result.yml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"ingress-result","namespace":"default"},"spec":{"rules":[{"host":null,"http":{"paths":[{"backend":{"service">
  creationTimestamp: "2023-02-04T14:33:28Z"
  finalizers:
  - networking.gke.io/ingress-finalizer-V2
  generation: 1
  name: ingress-result
  namespace: default
  resourceVersion: "688266"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: result
            port:
              number: 5001
        path: /result
        pathType: Prefix
